[package]
name = "gst-plugin-zenoh"
version = "0.1.0"
authors = ["Marc Pardo <p13marc@gmail.com>"]
license = "MPL-2.0"
description = "High-performance GStreamer plugin for distributed media streaming using Zenoh protocol"
repository = "https://github.com/p13marc/gst-plugin-zenoh.git"
edition = "2021"

[lib]
name = "gstzenoh"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
zenoh = { version = "1", features = ["unstable"] }
zenoh-config = "1"
thiserror = "2.0.4"
gst = { package = "gstreamer", version = "0.24.2" }
gst-base = { package = "gstreamer-base", version = "0.24.2" }
futures = "0.3.30"
anyhow = "1"
urlencoding = "2.1"


[dev-dependencies]
anyhow = "1"
futures = "0.3"
gst = { package = "gstreamer", version = "0.24.2" }
gst-check = { package = "gstreamer-check", version = "0.24.2" }
serial_test = "3.0"

[build-dependencies]
gst-plugin-version-helper = "0.8.2"
