[package]
name = "gst-plugin-zenoh"
version = "0.3.0"
authors = ["Marc Pardo <p13marc@gmail.com>"]
license = "MPL-2.0"
description = "High-performance GStreamer plugin for distributed media streaming using Zenoh protocol"
documentation = "https://docs.rs/gst-plugin-zenoh"
repository = "https://github.com/p13marc/gst-plugin-zenoh"
readme = "README.md"
keywords = ["gstreamer", "zenoh", "streaming", "multimedia", "pubsub"]
categories = ["multimedia::video", "network-programming"]
edition = "2024"
rust-version = "1.85"
exclude = ["/.github", "/examples", "CLAUDE.md"]

[lib]
name = "gstzenoh"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
zenoh = { version = "1.0", features = ["unstable"] }
zenoh-config = "1.0"
thiserror = "2.0.4"
gst = { package = "gstreamer", version = "0.24.2" }
gst-base = { package = "gstreamer-base", version = "0.24.2" }
futures = "0.3.30"
urlencoding = "2.1"

# Optional compression dependencies
zstd = { version = "0.13", optional = true }
lz4 = { version = "1.28", optional = true }
flate2 = { version = "1.0", optional = true }


[dev-dependencies]
anyhow = "1"
futures = "0.3"
gst = { package = "gstreamer", version = "0.24.2" }
gst-check = { package = "gstreamer-check", version = "0.24.2" }
serial_test = "3.0"

[build-dependencies]
gst-plugin-version-helper = "0.8.2"

[features]
default = []
compression-zstd = ["dep:zstd"]
compression-lz4 = ["dep:lz4"]
compression-gzip = ["dep:flate2"]
compression = ["compression-zstd", "compression-lz4", "compression-gzip"]

[package.metadata.docs.rs]
all-features = true
