[package]
name = "gst-plugin-zenoh"
version = "0.4.0"
authors = ["Marc Pardo <p13marc@gmail.com>"]
license = "MPL-2.0"
description = "High-performance GStreamer plugin for distributed media streaming using Zenoh protocol"
documentation = "https://docs.rs/gst-plugin-zenoh"
repository = "https://github.com/p13marc/gst-plugin-zenoh"
readme = "README.md"
keywords = ["gstreamer", "zenoh", "streaming", "multimedia", "pubsub"]
categories = ["multimedia::video", "network-programming"]
edition = "2024"
rust-version = "1.85"
exclude = ["/.github", "/examples", "CLAUDE.md"]

[lib]
name = "gstzenoh"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
zenoh = { version = "1.0", features = ["unstable"] }
zenoh-config = "1.0"
thiserror = "2.0.4"
gst = { package = "gstreamer", version = "0.24.2" }
gst-base = { package = "gstreamer-base", version = "0.24.2" }
futures = "0.3.30"
urlencoding = "2.1"

# Optional compression dependencies
zstd = { version = "0.13", optional = true }
lz4 = { version = "1.28", optional = true }
flate2 = { version = "1.0", optional = true }


[dev-dependencies]
anyhow = "1"
futures = "0.3"
gst = { package = "gstreamer", version = "0.24.2" }
gst-app = { package = "gstreamer-app", version = "0.24.2" }
gst-check = { package = "gstreamer-check", version = "0.24.2" }
serial_test = "3.0"

[build-dependencies]
gst-plugin-version-helper = "0.8.2"

[features]
default = []
compression-zstd = ["dep:zstd"]
compression-lz4 = ["dep:lz4"]
compression-gzip = ["dep:flate2"]
compression = ["compression-zstd", "compression-lz4", "compression-gzip"]

[package.metadata.docs.rs]
all-features = true

# Debian/Ubuntu packaging configuration (cargo-deb)
[package.metadata.deb]
maintainer = "Marc Pardo <p13marc@gmail.com>"
copyright = "2024-2025, Marc Pardo <p13marc@gmail.com>"
license-file = ["LICENSE", "0"]
extended-description = """\
GStreamer plugin for distributed media streaming using Zenoh protocol.
Provides zenohsink, zenohsrc, and zenohdemux elements for publishing
and subscribing to media streams over Zenoh networks."""
depends = "libgstreamer1.0-0 (>= 1.20), libgstreamer-plugins-base1.0-0 (>= 1.20)"
section = "libs"
priority = "optional"
assets = [
    ["target/release/libgstzenoh.so", "usr/lib/x86_64-linux-gnu/gstreamer-1.0/", "755"],
    ["README.md", "usr/share/doc/gst-plugin-zenoh/", "644"],
    ["LICENSE", "usr/share/doc/gst-plugin-zenoh/", "644"],
    ["CHANGELOG.md", "usr/share/doc/gst-plugin-zenoh/", "644"],
]

# RPM packaging configuration (cargo-generate-rpm)
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/libgstzenoh.so", dest = "/usr/lib64/gstreamer-1.0/libgstzenoh.so", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/gst-plugin-zenoh/README.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/doc/gst-plugin-zenoh/LICENSE", mode = "644", doc = true },
    { source = "CHANGELOG.md", dest = "/usr/share/doc/gst-plugin-zenoh/CHANGELOG.md", mode = "644", doc = true },
]

[package.metadata.generate-rpm.requires]
gstreamer1 = ">= 1.20"
gstreamer1-plugins-base = ">= 1.20"
